# cryptosaba

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md
src/libs/binance/: CMakeLists.txt  binance.cpp  binance.hpp
src/libs/core/config/: CMakeLists.txt  config.cpp  config.hpp
src/libs/core/pubsub/: CMakeLists.txt  pubsub.cpp  pubsub.hpp
src/libs/market/: CMakeLists.txt  market.cpp  market.hpp
src/libs/statistics/: CMakeLists.txt  live_stats.cpp  live_stats.hpp
src/libs/ta/candles/: CMakeLists.txt  candles.cpp  candles.hpp
src/libs/ta/frames/: CMakeLists.txt  frames.cpp  frames.hpp
src/libs/ta/general/: kernels.hpp
src/libs/ta/linear_regression/: CMakeLists.txt  linear_regression.cpp  linear_regression.hpp
src/libs/ta/logscale/: CMakeLists.txt  logscale.cpp  logscale.hpp
src/libs/ta/lowess/: CMakeLists.txt  lowess.cpp  lowess.hpp
src/libs/ta/segmented_weighted_linear_regression/: CMakeLists.txt  segmented_weighted_linear_regression.cpp  segmented_weighted_linear_regression.hpp
src/libs/ta/stepper/: CMakeLists.txt  stepper.cpp  stepper.hpp
src/libs/ta/trendlines/: CMakeLists.txt
src/libs/ta/trendlines/up_trend_line_zigzag/: CMakeLists.txt  up_trend_line_zigzag.cpp  up_trend_line_zigzag.hpp
src/libs/ta/vnode/: CMakeLists.txt  vnode.cpp  vnode.hpp
src/libs/ta/volumebox/: CMakeLists.txt  volumebox.cpp  volumebox.hpp
src/libs/ta/zigzag/: CMakeLists.txt  zigzag.cpp  zigzag.hpp
src/libs/trade/: CMakeLists.txt  trade.cpp  trade.hpp  tradecache.cpp  tradecache.hpp
src/libs/utils/: CMakeLists.txt  data_utils.cpp  data_utils.hpp  datetime_utils.cpp  datetime_utils.hpp  file_utils.cpp  file_utils.hpp  json_utils.hpp  random_utils.cpp  random_utils.hpp  string_utils.cpp  string_utils.hpp  timer.cpp  timer.hpp
src/scripts/candle_file_creator/: CMakeLists.txt  candle_file_creator.cpp  candle_file_test_1.cpp
src/scripts/market_anal/: CMakeLists.txt  market_anal_1.cpp  market_chart_data.cpp
src/scripts/studies/: CMakeLists.txt  high_volume_nodes.cpp  snapshot_analyze.cpp
src/scripts/studies/trend_detector/: CMakeLists.txt  trend_detector.cpp  trend_detector.hpp  trend_detector_test.cpp
src/scripts/tests/: CMakeLists.txt
src/scripts/tests/candles_test/: CMakeLists.txt  candles_test.cpp
src/scripts/tests/scene_test/: CMakeLists.txt  scene1.cpp  scene_info.cpp
src/scripts/tests/test1/: CMakeLists.txt  eigen_compare_regression.cpp  eigen_test_1.cpp  lowess_test.cpp  test1.cpp  utils_test.cpp
src/scripts/tests/trade_tests/: CMakeLists.txt  trade_test.cpp
src/scripts/tests/trendline_test/: CMakeLists.txt  trendline_test.cpp  trendline_test_2.cpp
src/scripts/trade_file_importer/: CMakeLists.txt  trade_file_importer.cpp
src/studies/high_volume_nodes/: high_volume_nodes.hpp
src/studies/snapshot_analyze/: CMakeLists.txt  README.md  snapshot_analyze.cpp  snapshot_analyze.hpp
